Sun Feb  7 22:53:17 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* conf.rb, fairy.conf:
	  CONF.CONTROLLER_MAX_ACTIVE_NTASKS_IN_PROCESSOR のデフォルトパラ
	  メータ値を調整した.

Sun Feb  7 20:23:40 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* b-group-by.rb: デバックログ追加
	* controller.rb: [REQ#205]対応で問題があった.

Fri Feb  5 21:18:26 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.conf: [REQ#205]対応忘れ.

Fri Feb  5 21:10:18 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* controller.rb, master.rb, processor.rb, conf.rb: [REQ#205]対応
	* controller.rb: Controller#terminateで例外の取りこぼしがあった.

Wed Feb  3 21:03:00 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* n-mod-group-by.rb: FastTempFile対応.
	  CONF.MOD_GROUP_BY_CMSB_THRESHOLDで閾値の計算がイマイチだった.
	  ModGroupByでデータが抜けていた([BUG#204]対応).
	* port.rb: GroupByでデッドロックする[BUG#202].
	  ChunkedFileBufferdQueue追加

Tue Jan 26 20:25:31 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* here.rb: [REQ#139}対応(try02)

Tue Jan 26 19:07:02 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* Ruby1.9.1p378で動作確認

Tue Jan 26 17:42:57 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.rb, log.rb, : [BUG#134], [BUG#199]対応. バグがあった.
	* vfile.rb: [REQ#200]対応. 

Tue Jan 26 16:47:13 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.conf, processor.rb, conf.rb, log.rb: [BUG#134], [BUG#199]
	  対応. ローカル出力のログをCONF.LOCAL_OUTPUT_DEVで指定できるよう
	  にした.

Fri Jan 22 20:30:34 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* controller.rb, master.rb: [BUG#198]対応(try2)

Fri Jan 22 19:47:17 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* controller.rb, master.rb: [BUG#198]対応(try1)

Fri Jan 22 15:18:51 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* n-file-output.rb: [REQ#138], [BUG#197]対応. VF_PREFIXでクライア
	  ント指定を受け付ける

Wed Jan 20 17:40:37 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* bin/fairy-cp, local-file-input.rb: [REQ#195], [REQ#196]

Wed Jan 20 14:02:49 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* bin/fairy, lib/fairy/share/conf.rb: [BUG#193]対応